New Crowdin updates (#1861)
* New translations locale.json (Spanish)

* New translations locale.json (Persian)

* New translations locale.json (Spanish)

* New translations locale.json (Spanish)

* New translations locale.json (Russian)

* New translations locale.json (Persian)

* New translations locale.json (Persian)

--- a/shared/src/main/resources/locales/locale_es.json
+++ b/shared/src/main/resources/locales/locale_es.json
@@ -1,5 +1,5 @@
 {
-  "skinsrestorer.help_skin": "Cambia tu skin.",
+  "skinsrestorer.help_skin": "Cambia tu aspecto.",
   "skinsrestorer.help_skins": "Abre el menú de Skins.",
   "skinsrestorer.help_sr": "Comandos de administrador para SkinsRestorer.",
   "skinsrestorer.help_skin_help": "Muestra este comando de ayuda.",
@@ -85,7 +85,7 @@
   "skinsrestorer.admincommand_info_no_set_skin": "<red>El jugador no tiene ningúna skin establecida explícitamente.",
   "skinsrestorer.admincommand_info_url_skin": "<gray>URL Skin: <gold><url><newline><gray>MineSkin ID: <gold><mine_skin_id>",
   "skinsrestorer.admincommand_info_hardcoded_skin": "<gray>Código de skin: <gold><skin>",
-  "skinsrestorer.admincommand_info_custom_skin": "<gray>Skin personalizada: <gold><skin>",
+  "skinsrestorer.admincommand_info_custom_skin": "<gray>Aspecto personalizado: <gold><skin>",
   "skinsrestorer.admincommand_info_player_skin": "<gray>Skin de jugador: <gold><skin><newline><gray>Marca de tiempo: <gold><timestamp><newline><gray>Expira: <gold><expires>",
   "skinsrestorer.admincommand_info_generic": "<gray>URL de textura: <gold><url><newline><gray>Variante: <gold><variant><newline><gray>Perfil UUID: <gold><uuid><newline><gray>Nombre de Perfil: <gold><name><newline><gray>Tiempo de Solicitud: <gold><request_time>",
   "skinsrestorer.admincommand_purgeolddata_success": "<green>¡Se han purgado las skins antiguas exitosamente!",
@@ -104,13 +104,13 @@
   "skinsrestorer.invalid_player": "<dark_red>Error<dark_gray>: <red><input> no es un nombre o URL válida.",
   "skinsrestorer.skin_cooldown": "<dark_red>Error<dark_gray>: <red>Puedes cambiar tu skin de nuevo en: <yellow><time></yellow>",
   "skinsrestorer.ms_uploading_skin": "<dark_green>Subiendo skin, por favor espera... (Esto puede tardar un poco)",
-  "skinsrestorer.wait_a_minute": "<dark_red>Error<dark_gray>: <red>Espera un minuto antes de solicitar esta skin nuevamente. (Tarifa limitada)",
+  "skinsrestorer.wait_a_minute": "<dark_red>Error<dark_gray>: <red>Espera un minuto antes de solicitar este aspecto nuevamente. (Tarifa limitada)",
   "skinsrestorer.skinsmenu_open": "Abriendo el menu de skins...",
   "skinsrestorer.skinsmenu_title_select": "<blue>Menú seleccionado",
   "skinsrestorer.skinsmenu_title_main": "<blue>Menú de skins - Página <page_number>",
   "skinsrestorer.skinsmenu_title_history": "<blue>Menú de historial - Página <page_number>",
   "skinsrestorer.skinsmenu_title_favourites": "<blue>Menú de Favoritos - Página <page_number>",
-  "skinsrestorer.skinsmenu_next_page": "<green><bold>»</bold> <gray>Siguiente pagina</gray> <bold>»</bold>",
+  "skinsrestorer.skinsmenu_next_page": "<green><bold>»</bold> <gray>Siguiente página</gray> <bold>»</bold>",
   "skinsrestorer.skinsmenu_previous_page": "<yellow><bold>«</bold> <gray>Página anterior</gray> <bold>«</bold>",
   "skinsrestorer.skinsmenu_clear_skin": "<red><bold>[</bold> <gray>Remover Skin</gray> <bold>]</bold>",
   "skinsrestorer.skinsmenu_select_skin": "<gray>Click para seleccionar esta skin",
@@ -156,7 +156,7 @@
   "skinsrestorer.permission_admincommand_dump": "Permite el acceso a información de subida del servidor mediante \"/sr dump\".",
   "skinsrestorer.permission_bypasscooldown": "Salta cualquier tiempo de espera para comandos establecido en la configuración.",
   "skinsrestorer.permission_bypassdisabled": "Desbloquea cualquier skin desactivado en la configuración.",
-  "skinsrestorer.permission_ownskin": "Permite el acceso para establecer tu propia skin.",
+  "skinsrestorer.permission_ownskin": "Permite el acceso para establecer tu propio aspecto.",
   "skinsrestorer.duration_day": " día",
   "skinsrestorer.duration_days": " días",
   "skinsrestorer.duration_hour": " hora",
