New Crowdin updates (#1866)
* New translations locale.json (Indonesian)

* New translations locale.json (Spanish)

--- a/shared/src/main/resources/locales/locale_es.json
+++ b/shared/src/main/resources/locales/locale_es.json
@@ -14,11 +14,11 @@
   "skinsrestorer.help_skin_update": "Actualiza tu skin.",
   "skinsrestorer.help_skin_update_other": "Actualiza la skin a un jugador específico.",
   "skinsrestorer.help_skin_undo": "Invierte tu skin de vuelta a la skin anterior.",
-  "skinsrestorer.help_skin_undo_other": "Rvierte la skin de un jugador objetivo de vuelta a la skin anterior.",
+  "skinsrestorer.help_skin_undo_other": "Revierte la skin de un jugador objetivo de vuelta a la skin anterior.",
   "skinsrestorer.help_skin_favourite": "Guarda tu skin como favorita.",
   "skinsrestorer.help_skin_favourite_other": "Guarda la skin de un jugador objetivo como favorito.",
   "skinsrestorer.help_sr_reload": "Recarga el archivo de configuración.",
-  "skinsrestorer.help_sr_status": "Comprueba la servicios API requeridos por el plugin.",
+  "skinsrestorer.help_sr_status": "Verifica los servicios API requeridos del plugin.",
   "skinsrestorer.help_sr_drop": "Elimina el jugador o la skin de la base de datos.",
   "skinsrestorer.help_sr_info": "Muestra información sobre un jugador o skin.",
   "skinsrestorer.help_sr_apply_skin": "Reaplica la skin para el jugador seleccionado.",
@@ -39,24 +39,24 @@
   "skinsrestorer.success_skin_clear_other": "Has limpiado la skin de <yellow><name></yellow>.",
   "skinsrestorer.success_updating_skin": "Tu skin ha sido actualizada.",
   "skinsrestorer.success_updating_skin_other": "Skin actualizada para el jugador <yellow><name></yellow>.",
-  "skinsrestorer.success_admin_applyskin": "La skin del jugador ha sido actualizada!",
-  "skinsrestorer.success_admin_createcustom": "La skin <yellow><skin></yellow> ha sido creada!",
+  "skinsrestorer.success_admin_applyskin": "¡La skin del jugador ha sido actualizada!",
+  "skinsrestorer.success_admin_createcustom": "¡La skin <yellow><skin></yellow> ha sido creada!",
   "skinsrestorer.success_admin_setcustomname": "El nombre de la skin <yellow><skin></yellow> se ha establecido en <yellow><display_name></yellow>.",
   "skinsrestorer.success_admin_drop": "<type> de datos descartados para <target>.",
   "skinsrestorer.success_admin_reload": "La configuración y el idioma se han recargado!",
   "skinsrestorer.success_history_line": "<dark_green>- <hover:show_text:'<dark_green>Haz clic para usar <yellow><skin></yellow>'><click:run_command:/skin set \"<skin_id>\"><yellow><skin></yellow></click></hover> de <yellow><timestamp></yellow>",
   "skinsrestorer.success_favourites_line": "<dark_green>- <hover:show_text:'<dark_green>Haz clic para usar <yellow><skin></yellow>'><click:run_command:/skin set \"<skin_id>\"><yellow><skin></yellow></click></hover> de <yellow><timestamp></yellow>",
   "skinsrestorer.error_generic": "<dark_red>Error<dark_gray><red><message>",
-  "skinsrestorer.error_generic_skin": "Se produjo un error al solicitar los datos de la skin, por favor inténtalo de nuevo más tarde!",
-  "skinsrestorer.error_no_undo": "No tienes ninguna skin para revertir!",
-  "skinsrestorer.error_no_skin_to_favourite": "No tienes ninguna skin para establecer como favorita!",
+  "skinsrestorer.error_generic_skin": "¡Se produjo un error al solicitar los datos de la skin, por favor inténtalo de nuevo más tarde!",
+  "skinsrestorer.error_no_undo": "¡No tienes ninguna skin para revertir!",
+  "skinsrestorer.error_no_skin_to_favourite": "¡No tienes ninguna skin para establecer como favorita!",
   "skinsrestorer.error_skin_disabled": "Esta skin está desactivada por un administrador.",
   "skinsrestorer.error_skinurl_disallowed": "Este dominio no ha sido permitido por el administrador.",
   "skinsrestorer.error_updating_skin": "Se produjo un error al actualizar tu skin. Por favor, inténtalo de nuevo más tarde!",
-  "skinsrestorer.error_updating_url": "No puedes actualizar skins con URL personalizadas! <newline><red>Solicita de nuevo usando /skin url",
+  "skinsrestorer.error_updating_url": "¡No puedes actualizar skins con URL personalizadas! <newline><red>Solicita de nuevo usando /skin url",
   "skinsrestorer.error_updating_customskin": "La skin no puede ser actualizada porque es personalizada.",
   "skinsrestorer.error_invalid_urlskin": "URL de skin inválida o formato incorrecto, <newline><red>\"Intenta subir tu skin a Imgur y haz clic derecho en 'copiar dirección de imagen'<newline><red>Para ver la guía, consulta:<red><underlined>skinsrestorer.net/skinurl",
-  "skinsrestorer.error_admin_applyskin": "La skin del jugador NO pudo ser actualizada!",
+  "skinsrestorer.error_admin_applyskin": "¡La skin del jugador NO pudo ser actualizada!",
   "skinsrestorer.error_ms_full": "MineSkin API ha agotado el tiempo de espera al cargar su skin. Por favor, inténtelo de nuevo más tarde.",
   "skinsrestorer.error_ms_api_failed": "La API de MineSkin está sobrecargada, por favor inténtalo de nuevo más tarde.",
   "skinsrestorer.error_ms_api_key_invalid": "Clave de API de MineSkin inválida!, Contacta al dueño del servidor sobre esto!",
