--- a/shared/src/main/resources/locales/locale_id.json
+++ b/shared/src/main/resources/locales/locale_id.json
@@ -63,14 +63,15 @@
   "skinsrestorer.error_ms_unknown": "Kesalahan MineSkin tidak diketahui!",
   "skinsrestorer.error_no_history": "Kamu tidak memiliki riwayat skin!",
   "skinsrestorer.error_no_favourites": "Kamu tidak memiliki skin favorit!",
+  "skinsrestorer.error_player_refresh_no_mapping": "Tidak dapat memuat ulang skin mu karena versi Minecraft ini tidak didukung oleh SkinsRestorer. Mohon beritahu admin server untuk memperbarui plugin SkinsRestorer.",
   "skinsrestorer.not_connected_to_server": "<red>Kamu tidak tersambung ke server manapun.",
   "skinsrestorer.divider": "<dark_aqua>----------------------------------------------",
-  "skinsrestorer.admincommand_status_checking": "<gray>Pengecekan layanan perlu dilakukan untuk SR dapat bekerja dengan baik...",
+  "skinsrestorer.admincommand_status_checking": "<gray>Menjalankan pemeriksaan layanan...",
   "skinsrestorer.admincommand_status_uuid_api": "<gray>API UUID yang bekerja: <count>/<total>",
   "skinsrestorer.admincommand_status_profile_api": "<gray>API Profil yang bekerja: <count>/<total>",
   "skinsrestorer.admincommand_status_working": "<green>Plugin saat ini dalam keadaan bekerja.",
   "skinsrestorer.admincommand_status_degraded": "<green>Plugin dalam kondisi terdegradasi, beberapa fitur mungkin tidak bekerja.",
-  "skinsrestorer.admincommand_status_broken": "<red>Plugin saat ini tidak dapat mengambil skin baru.<newline>Koneksi mungkin terblokkir karena firewall.<newline>Silahkan lihat https://skinsrestorer.net/firewall untuk informasi lebih lanjut",
+  "skinsrestorer.admincommand_status_broken": "<red>Plugin saat ini dalam keadaan rusak, tidak ada skin baru yang dapat diminta.",
   "skinsrestorer.admincommand_status_firewall": "<red>Koneksi kemungkinan diblokir karena firewall.<newline>Silahkan baca https://skinsrestorer.net/firewall untuk info lebih lanjut.",
   "skinsrestorer.admincommand_status_summary_server": "<gray>Server: <gold><version>",
   "skinsrestorer.admincommand_status_summary_proxymode": "<gray>ProxyMode: <gold><proxy_mode>",
