New Crowdin updates (#1877)
* New translations locale.json (Afrikaans)

* New translations locale.json (Chinese Traditional, Hong Kong)

* New translations locale.json (German)

* New translations locale.json (German, Austria)

* New translations locale.json (German, Switzerland)

* New translations locale.json (Afrikaans)

* New translations locale.json (Chinese Traditional)

* New translations locale.json (Spanish)

* New translations locale.json (Hungarian)

* New translations locale.json (Korean)

* New translations locale.json (Polish)

* New translations locale.json (Russian)

* New translations locale.json (Ukrainian)

* New translations locale.json (Chinese Simplified)

* New translations locale.json (Indonesian)

* New translations locale.json (Spanish, Argentina)

* New translations locale.json (Chinese Traditional, Hong Kong)

---------

Co-authored-by: xknat <kevin.natte@gmail.com>

--- a/shared/src/main/resources/locales/locale_hu.json
+++ b/shared/src/main/resources/locales/locale_hu.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "Megváltoztatja a kinézeted.",
   "skinsrestorer.help_skins": "Megnyitja a kinézetek menüt.",
   "skinsrestorer.help_sr": "SkinsRestorer admin parancsai.",
