--- a/shared/src/main/resources/locales/locale_zh_cn.json
+++ b/shared/src/main/resources/locales/locale_zh_cn.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "更改您自己的皮肤。",
   "skinsrestorer.help_skins": "打开皮肤菜单",
   "skinsrestorer.help_sr": "SkinsRestorer的管理员指令",
