--- a/shared/src/main/resources/locales/locale_de.json
+++ b/shared/src/main/resources/locales/locale_de.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "Ändert deinen Skin.",
   "skinsrestorer.help_skins": "Öffnet das Skin-GUI.",
   "skinsrestorer.help_sr": "Admin-Befehle für SkinsRestorer.",
