--- a/shared/src/main/resources/locales/locale_ko.json
+++ b/shared/src/main/resources/locales/locale_ko.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "내 스킨을 변경해요.",
   "skinsrestorer.help_skins": "스킨 GUI를 열어요.",
   "skinsrestorer.help_sr": "SkinsRestorer용 관리자 명령어예요.",
