--- a/shared/src/main/resources/locales/locale_ru.json
+++ b/shared/src/main/resources/locales/locale_ru.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "Изменяет ваш собственный скин.",
   "skinsrestorer.help_skins": "Открывает интерфейс скинов.",
   "skinsrestorer.help_sr": "Команды администратора для SkinsRestorer.",
