--- a/shared/src/main/resources/locales/locale_zh_tw.json
+++ b/shared/src/main/resources/locales/locale_zh_tw.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "變更你自己的外觀。",
   "skinsrestorer.help_skins": "開啟外觀 GUI。",
   "skinsrestorer.help_sr": "SkinsRestorer 的管理員指令。",
