New Crowdin updates (#1882)
* New translations locale.json (Chinese Traditional)

* New translations locale.json (French)

* New translations locale.json (Spanish)

* New translations locale.json (Afrikaans)

* New translations locale.json (German)

* New translations locale.json (Finnish)

* New translations locale.json (Hungarian)

* New translations locale.json (Italian)

* New translations locale.json (Japanese)

* New translations locale.json (Korean)

* New translations locale.json (Lithuanian)

* New translations locale.json (Polish)

* New translations locale.json (Russian)

* New translations locale.json (Slovak)

* New translations locale.json (Slovenian)

* New translations locale.json (Turkish)

* New translations locale.json (Ukrainian)

* New translations locale.json (Chinese Simplified)

* New translations locale.json (Vietnamese)

* New translations locale.json (Portuguese, Brazilian)

* New translations locale.json (Indonesian)

* New translations locale.json (Spanish, Argentina)

* New translations locale.json (Croatian)

* New translations locale.json (Chinese Traditional, Hong Kong)

* New translations locale.json (German, Austria)

* New translations locale.json (German, Switzerland)

--- a/shared/src/main/resources/locales/locale_es.json
+++ b/shared/src/main/resources/locales/locale_es.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "Cambia tu aspecto.",
   "skinsrestorer.help_skins": "Abre el menú de Skins.",
   "skinsrestorer.help_sr": "Comandos de administrador para SkinsRestorer.",
@@ -123,7 +124,6 @@
   "skinsrestorer.skinsmenu_history_button": "<aqua><bold>[</bold> <gray>Menú de Historial</gray> <bold>]</bold>",
   "skinsrestorer.skinsmenu_favourites_button": "<aqua><bold>[</bold> <gray>Menú de Favoritos</gray> <bold>]</bold>",
   "skinsrestorer.skinsmenu_back_select_button": "<yellow><bold>«</bold> <gray>Menú de Selección</gray> <bold>«</bold>",
-  "skinsrestorer.skin_search_message": "<dark_green>Puedes encontrar skins que coincidan con <green><search></green> aquí: <newline><green>https://namemc.com/minecraft-skins/tag/<search> <newline><newline><dark_green>Si no se encuentran skins, siempre puede encontrar algunas en https://namemc.com/minecraft-skins/tag <newline>Puedes establecer la skin usando el enlace de la misma:<newline> /skin https://namemc.com/skin/",
   "skinsrestorer.no_skin_data": "<dark_red>Error<dark_gray>: <red>¡No se encontraron datos de skin! ¿Este jugador tiene un skin?",
   "skinsrestorer.outdated": "<dark_red>Estás usando una versión vieja de SkinsRestorer en tu <platform>!<newline><red>Puede actualizarlo mediante el siguiente link en Spigot: <newline><yellow>https://www.spigotmc.org/resources/skinsrestorer.2124",
   "skinsrestorer.unsupported_java": "<dark_red>La versión de Java (<version>) de tu <platform> no es compatible con SkinsRestorer!<newline><red>Por favor, actualice a Java 17 o superior para utilizar SkinsRestorer sin problemas. Las nuevas versiones de Java también pueden ejecutar servidores más antiguos, por lo que un servidor de Minecraft 1.8 puede funcionar con Java 17. Lee la información de la consola para más detalles.",
