--- a/shared/src/main/resources/locales/locale_zh_tw.json
+++ b/shared/src/main/resources/locales/locale_zh_tw.json
@@ -1,4 +1,5 @@
 {
+  "skinsrestorer.prefix_format": "<yellow>[<dark_green>SkinsRestorer</dark_green>] <message>",
   "skinsrestorer.help_skin": "變更你自己的外觀。",
   "skinsrestorer.help_skins": "開啟外觀 GUI。",
   "skinsrestorer.help_sr": "SkinsRestorer 的管理員指令。",
@@ -123,7 +124,6 @@
   "skinsrestorer.skinsmenu_history_button": "<aqua><bold>[</bold> <gray>歷史記錄選單</gray> <bold>]</bold>",
   "skinsrestorer.skinsmenu_favourites_button": "<aqua><bold>[</bold> <gray>收藏選單</gray> <bold>]</bold>",
   "skinsrestorer.skinsmenu_back_select_button": "<yellow><bold>«</bold> <gray>選單選擇</gray> <bold>«</bold>",
-  "skinsrestorer.skin_search_message": "<dark_green>你可以在這裡找到符合 <green><search></green> 的外觀：<newline><green>https://namemc.com/minecraft-skins/tag/<search> <newline><newline><dark_green>如果找不到任何外觀，你隨時可以在 https://namemc.com/minecraft-skins/tag 找到一些外觀<newline>你可以使用外觀連結設定外觀：<newline>/skin https://namemc.com/skin/",
   "skinsrestorer.no_skin_data": "<dark_red>錯誤<dark_gray>：<red>找不到外觀資料！",
   "skinsrestorer.outdated": "<dark_red>你在你的 <platform> 上執行的是過時版本的 SkinsRestorer！<newline><red>請更新到 Spigot 上的最新版本： <newline><yellow>https://www.spigotmc.org/resources/skinsrestorer.2124/",
   "skinsrestorer.unsupported_java": "<dark_red>你的 <platform> 的 Java 版本 (<version>) 不受 SkinsRestorer 支援！<newline><red>請更新到 Java 17 或以上版本，以毫無問題地使用 SkinsRestorer。較新的 Java 版本也可以執行較舊的伺服器，因此 Minecraft 1.8 伺服器可以在 Java 17 上執行。請閱讀控制台資訊以取得更多詳細資訊。",
